2688 [x264]                 fixed incorrect command line when using a x86 OS
2687 [Update]               added possibility to mark package architectures as "any"
2686 [VobSubber]            switched to VobSub Ripper
                            forced subtitles will be extracted separately if available
                            the track language will be added if multiple track files are used
2685 [x265]                 switched to avs4x26x for x64 on an x86 OS
2684 [Presets]              improved handling of preset selection/saving. Feature request #606
2683 [x264]                 fixed "force sar" option (regression of 2628). Bug #862
2682 [x264] + [x265]        added support for custom commands leading with a single hyphen (e.g. -D)
2681 [x264]                 removed option to select 32bit x264 on a 64bit OS and merged the 8- and 10-bit packages
2679 [Update]               improved updater to download appropriate architecture packages
2678 [AviSynthProfile]      added option to treat sources as anime for deinterlacing
2677 [OneClick]             fixed wrong track information in some use cases
2676 [x265]                 fixed duplicated custom command line values (regression of 2673)
2675                        improved portable AviSynth runtime handling
2674 [Audio Cutter]         preselect output file. Feature request #597
2673 [x265]                 added --sar detection. Feature request #601
2672 [Title Selector]       added option to change the minimum title length also in the global settings
2671 [VobSubber]            remember the "keep all..." setting. Feature request #600
2670 [Haali Media Splitter] added "Haali Media Splitter" as update package
                            improved detection if it is installed
                            if it is needed by the HD Streams Extractor it will be installed (administrative permissions are required)
2669 [VobSubber]            added title selector for DVD sources incl. multi-angle support